panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__pointers__test_addressof_derefd_pointer_to_incomplete_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/pointers/test_addressof_derefd_pointer_to_incomplete_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/pointers/test_addressof_derefd_pointer_to_incomplete_type.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition p~3 `ptr<struct T~2>` (noop-type-conversion `ptr<struct T~2>` (nullptr `nullptr_t`)))
         (definition q~4 `ptr<struct T~2>`
            (addressof `ptr<struct T~2>`
               (deref `struct T~2` (p~3 `ptr<struct T~2>`))))
         (return (ptr-equal `int` (p~3 `ptr<struct T~2>`) (q~4 `ptr<struct T~2>`))))))

----- stderr -----
