panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__pointers__test_compound_literal_as_null_pointer_constant.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/pointers/test_compound_literal_as_null_pointer_constant.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/pointers/test_compound_literal_as_null_pointer_constant.c"
   (definition external p1~0 `ptr<int>` (sign-extend `ptr<int>` (compound-literal `int` (definition external compound_literal.1~2 `int` (braced ∅)))))
   (function-definition external
      main~3 `fn() -> int`
      (compound-statement
         (hoisted-compound-literal compound_literal.1~2 `int`)
         (hoisted-compound-literal compound_literal.6~7 `int`)
         (definition p2~5 `ptr<int>` (sign-extend `ptr<int>` (compound-literal `int` (definition compound_literal.6~7 `int` (braced ∅)))))
         (return
            (logical-and `int`
               (ptr-equal `int` (p1~0 `ptr<int>`) (nullptr `nullptr_t`))
               (ptr-equal `int` (p2~5 `ptr<int>`) (nullptr `nullptr_t`)))))))

----- stderr -----
