panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__pointers__test_deref_pointer_to_array_of_unknown_size.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/pointers/test_deref_pointer_to_array_of_unknown_size.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/pointers/test_deref_pointer_to_array_of_unknown_size.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (definition xs~3 `array<int; 42>`
            (braced
               (subobject +0 (1 `int`))
               (subobject +4 (2 `int`))
               (subobject +8 (3 `int`))
               (subobject +12 (4 `int`))
               (subobject +108 (5 `int`))))
         (definition p~4 `ptr<array<int; ∅>>`
            (addressof `ptr<array<int; 42>>`
               (xs~3 `array<int; 42>`)))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%d\n\0"))))
               (deref `int`
                  (ptr-add `ptr<int>`
                     (noop-type-conversion `ptr<int>`
                        (addressof `ptr<array<int; ∅>>`
                           (deref `array<int; ∅>` (p~4 `ptr<array<int; ∅>>`))))
                     (sign-extend `long` (27 `int`))))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%d\n\0"))))
               (deref `int`
                  (noop-type-conversion `ptr<int>`
                     (addressof `ptr<array<int; ∅>>`
                        (deref `array<int; ∅>` (p~4 `ptr<array<int; ∅>>`)))))))
         (expression
            (assign `int`
               (deref `int`
                  (noop-type-conversion `ptr<int>`
                     (addressof `ptr<array<int; ∅>>`
                        (deref `array<int; ∅>` (p~4 `ptr<array<int; ∅>>`)))))
               (123 `int`)))
         (return
            (deref `int`
               (noop-type-conversion `ptr<int>`
                  (addressof `ptr<array<int; ∅>>`
                     (deref `array<int; ∅>` (p~4 `ptr<array<int; ∅>>`)))))))))

----- stderr -----
