panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__pointers__test_pointer_arithmetic_with_negative_integral.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/pointers/test_pointer_arithmetic_with_negative_integral.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/pointers/test_pointer_arithmetic_with_negative_integral.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (struct T~1
      (member x @0 `int`)
      (member y @4 `int`)
      (member z @8 `int`))
   (function-definition external
      main~2 `fn() -> int`
      (compound-statement
         (definition t~4 `struct T~1 complete`
            (braced
               (subobject +0 (10 `int`))
               (subobject +4 (20 `int`))
               (subobject +8 (30 `int`))))
         (definition p~5 `ptr<int>`
            (ptr-add `ptr<int>`
               (addressof `ptr<int>`
                  (member `int` y +4
                     (t~4 `struct T~1 complete`)))
               (sign-extend `long` (negate `int` (1 `int`)))))
         (definition runtime_p~6 `ptr<int>`
            (ptr-add `ptr<int>`
               (addressof `ptr<int>`
                  (member `int` y +4
                     (t~4 `struct T~1 complete`)))
               (sign-extend `long` (negate `int` (1 `int`)))))
         (definition p2~7 `ptr<int>`
            (ptr-sub `ptr<int>`
               (addressof `ptr<int>`
                  (member `int` y +4
                     (t~4 `struct T~1 complete`)))
               (sign-extend `long` (negate `int` (1 `int`)))))
         (definition runtime_p2~8 `ptr<int>`
            (ptr-sub `ptr<int>`
               (addressof `ptr<int>`
                  (member `int` y +4
                     (t~4 `struct T~1 complete`)))
               (sign-extend `long` (negate `int` (1 `int`)))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 7>>`
                        (string `array<char; 7>` "%d %d\n\0"))))
               (deref `int` (p~5 `ptr<int>`))
               (deref `int` (p2~7 `ptr<int>`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 7>>`
                        (string `array<char; 7>` "%d %d\n\0"))))
               (deref `int` (runtime_p~6 `ptr<int>`))
               (deref `int` (runtime_p2~8 `ptr<int>`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 7>>`
                        (string `array<char; 7>` "%d %d\n\0"))))
               (ptr-equal `int` (p~5 `ptr<int>`) (runtime_p~6 `ptr<int>`))
               (ptr-equal `int` (p2~7 `ptr<int>`) (runtime_p2~8 `ptr<int>`)))))))

----- stderr -----
